User app Budget: Moved budget.css to css/budgetScreen.css. Updated style definitions, all td elements now use the Papyrus font family, budget expense cells now have a word-spacing of 18px, budget messages now have a margin of 20px. availableBalanceForm.php, changed the submit label to "Submit available balances" instead of just "Submit". selectSavedBudgetForm.php, Corrected $excludedListings array item '.DS_STORE' to ".DS_Store". Corrected switch to check $savedBudgetId instead of $budgetId. Corrected references to and assembly of budget title throughout app. Cleaned up code and corrected spelling errors.

--- a/apps/budget/css/budgetScreen.css
+++ b/apps/budget/css/budgetScreen.css
@@ -14,6 +14,7 @@
 
 .budget td {
     border: 2px solid #77ddff;
+    font-family: Papyrus;
 }
 
 .budget th {
@@ -60,7 +61,7 @@
 .budget-message {
     border: 2px solid #eeeeee;
     border-radius: 9px;
-    margin: 0 auto;
+    margin: 20px auto;
     width: 98%;
     padding: 20px;
     font-family: Courier;
@@ -103,6 +104,7 @@
 
 .budget-expense-cell {
     font-family: Papyrus;
+    word-spacing: 18px;
 }
 
 .budget-expense-cell-bg-1 {
